Bug fixes: image button appeared disabled on mobile device after upload. buttons are not animated.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -231,6 +231,12 @@ input[type=submit] {
 }
 
 @media (max-width:600px) {
+  button:active {
+    transform: translate(2px,2px);
+    -webkit-transition: background .4s ease;
+    transition: .4s ease;
+  }
+
   * {
     font-size: 1rem
   }
